--- a/p1-encrypt-decrypt-app/MainWindow.xaml
+++ b/p1-encrypt-decrypt-app/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <TextBox HorizontalAlignment="Center" TextWrapping="Wrap" Text="Hello Làm đồ án nhe" VerticalAlignment="Center" Width="115" TextChanged="TextBox_TextChanged" FontFamily="Arial Narrow" FontSize="14" FontWeight="Bold"/>
 
     </Grid>
 </Window>
