#5 hhman - Encrypt and Decrypt function is switch main screen

--- a/p1-encrypt-decrypt-app/App.xaml
+++ b/p1-encrypt-decrypt-app/App.xaml
@@ -9,6 +9,7 @@
                 <ResourceDictionary Source="\Resources\ButtonStyle.xaml"/>
                 <ResourceDictionary Source="\Resources\TextStyle.xaml"/>
                 <ResourceDictionary Source="\Resources\UIColor.xaml"/>
+                <ResourceDictionary Source="\Resources\ComboBoxStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
