--- a/p1-encrypt-decrypt-app/Resources/TextStyle.xaml
+++ b/p1-encrypt-decrypt-app/Resources/TextStyle.xaml
@@ -1,56 +1,23 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <!--#region Text styles-->
-    <Style x:Key="TitleText" TargetType="{x:Type TextBlock}">
-        <Setter Property="Foreground" Value="{DynamicResource Foreground}"/>
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="FontSize" Value="10"/>
-        <Setter Property="FontWeight" Value="SemiBold"/>
-        <Setter Property="FontFamily" Value="Museo Sans 700"/>
-    </Style>
 
-    <Style x:Key="MainText" TargetType="{x:Type TextBlock}">
-        <Setter Property="Foreground" Value="{DynamicResource Foreground}"/>
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="FontSize" Value="22"/>
-        <Setter Property="FontWeight" Value="Normal"/>
-        <Setter Property="FontFamily" Value="Segoe UI Bold"/>
-    </Style>
-
-    <Style x:Key="NormalText" TargetType="{x:Type TextBlock}">
-        <Setter Property="Foreground" Value="{DynamicResource MainColorLight}"/>
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="FontSize" Value="12"/>
-        <Setter Property="FontWeight" Value="Medium"/>
-        <Setter Property="FontFamily" Value="Segoe UI"/>
-    </Style>
-
-    <Style x:Key="MainText2" TargetType="{x:Type TextBlock}">
-        <Setter Property="Foreground" Value="{DynamicResource Foreground}"/>
+    <Style TargetType="TextBox" x:Key="TextBoxReadOnly">
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
-        <Setter Property="FontSize" Value="22"/>
-        <Setter Property="FontWeight" Value="Regular"/>
-        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="Height" Value="150"/>
+        <Setter Property="Width" Value="150"/>
+        
+        <Setter Property="Background" Value="{DynamicResource panelOverColor}"/>
+        <Setter Property="Foreground" Value="#9b9b9b"/>
+        <Setter Property="SelectionBrush" Value="Transparent"/>
+        <Setter Property="BorderBrush" Value="#333536"/>
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="CaretBrush" Value="{DynamicResource titleColor1}"/>
+        <Setter Property="ContextMenu" Value="{x:Null}"/>
+        <Setter Property="Cursor" Value="Arrow"/>
+        <Setter Property="IsReadOnly" Value="True"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
+        <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
     </Style>
 
-    <Style x:Key="SettingsMainText" TargetType="{x:Type TextBlock}">
-        <Setter Property="Foreground" Value="{DynamicResource Foreground}"/>
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="VerticalAlignment" Value="Top"/>
-        <Setter Property="FontSize" Value="14"/>
-        <Setter Property="FontFamily" Value="Segoe UI"/>
-        <Setter Property="FontWeight" Value="SemiBold"/>
-    </Style>
-
-    <Style x:Key="SettingsText" TargetType="{x:Type TextBlock}">
-        <Setter Property="Foreground" Value="{DynamicResource SettingsTextForeground}"/>
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="VerticalAlignment" Value="Top"/>
-        <Setter Property="FontSize" Value="14"/>
-        <Setter Property="FontFamily" Value="Segoe UI"/>
-        <Setter Property="FontWeight" Value="Regular"/>
-    </Style>
-    
 </ResourceDictionary>
