--- a/p1-encrypt-decrypt-app/Resources/ButtonStyle.xaml
+++ b/p1-encrypt-decrypt-app/Resources/ButtonStyle.xaml
@@ -104,13 +104,13 @@
         <Setter Property="FontFamily" Value="Montserrat"/>
         <Setter Property="FontSize" Value="13.5"/>
         <Setter Property="Padding" Value="5"/>
-        <Setter Property="Width" Value="120"/>
         <Setter Property="Foreground" Value="{DynamicResource titleColor1}"/>
         <Setter Property="Background" Value="#773DFF"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border Height="30"
+                    <Border VerticalAlignment="Stretch"
+                            HorizontalAlignment="Stretch"
                             CornerRadius="6"
                             Background="{TemplateBinding Background}">
                         <ContentPresenter VerticalAlignment="Center" 
